# TODO: name these headers better, e.g. libparsebgp.h, libparsebgp_bmp.h
# TODO: make headers more self-contained
# TODO: ensure we don't have spurious headers
include_HEADERS = libParseBGP.h \
		parse_bgp.h 	\
		parse_bmp.h	\
		parse_mrt.h	

noinst_HEADERS = add_path_data_container.h 	\
		evpn.h				\
		ext_community.h			\
		mp_link_state.h			\
		mp_link_state_attr.h		\
		mp_reach_attr.h			\
		mp_un_reach_attr.h		\
		notification_msg.h		\
		open_msg.h			\
		parse_utils.h			\
		bgp_common.h			\
		update_msg.h			\
		lib_parse_common.h

CLEANFILES = *~
